# codraw-gpt

./: README.md  pyproject.toml
codraw/: basic.py  bicycle.py  complete.py
codraw/prompts/: instructions.txt  system.txt
outputs/: bicycle.py
tmux/: session  tmux.sh
