[tool.poetry]
name = "codraw-gpt"
version = "0.0.0"
description = "Dialogue interface for chalk-diagrams."
authors = ["Justin Chiu <chiu.justin.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
scipy = "*"
jaxlib = "^0.4.14"
jax = "*"
tfp-nightly = "*"
numpyro = "*"
pyparsing = "*"
python-dateutil = "*"
rich = "*"
tiktoken = "*"
tyro = "*"
thefuzz = "*"
openai = "*"
seaborn = "*"
chalk-diagrams = { git = "https://github.com/chalk-diagrams/chalk.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

